--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,13 +12,13 @@ jobs:
     strategy:
       matrix:
         go-version: [1.22.x, 1.23.x, 1.24.x, 1.25.x]
-        platform: [ubuntu-latest, macos-latest, windows-latest, macos-14]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
     - name: Checkout code
-      uses: actions/checkout@v6.0.0
+      uses: actions/checkout@v6
     - name: Install Go
-      uses: actions/setup-go@v6.1.0
+      uses: actions/setup-go@v6
       with:
         go-version: ${{ matrix.go-version }}
     - name: Test
